added index content and started work on style

--- a/style.css
+++ b/style.css
@@ -1,4 +1,58 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color:#E5E7EB;
+}
+
+.darkbg {
+    background-color: #1F2937;
+}
+
+.title {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.subtitle {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header {
+    background-color: #1F2937;
+}
+
+.header_logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.header_links {
+    list-style: none;
+    font-size: 18px;
+    color:#E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+}
+
+.information_header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    background-color: #E5E7EB;
 }
