finished header, hero and randinfo

--- a/style.css
+++ b/style.css
@@ -1,16 +1,81 @@
 body {
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Arial;
+    margin: 0px;
 }
+
+.darkbg {
+    background-color: #1F2937;
+}
+
+/* Header content */
 
 a {
     text-decoration: none;
     color:#E5E7EB;
 }
 
-.darkbg {
+li {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: light;
+}
+
+.header {
     background-color: #1F2937;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.header_logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.header_links {
+    list-style: none;
+    font-size: 18px;
+    color:#E5E7EB;
+}
+
+/* Hero Content */
+
+.image_container {
+    background-color:dimgray;
+    width: 400px;
+    height: 300px;
+    min-width: 400px;
+    min-height: 300px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    color:#F9FAF8;
+}
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.splash_box1 {
+    padding: 90px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.hero_box {
+    padding-right: 30px;
+    max-width: 400px;
+}
+
+.hero_content {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -24,35 +89,85 @@ a {
     color: #E5E7EB;
 }
 
-.header {
-    background-color: #1F2937;
-}
-
-.header_logo {
-    font-size: 24px;
-    color: #F9FAF8;
-}
-
-.header_links {
-    list-style: none;
-    font-size: 18px;
-    color:#E5E7EB;
-}
-
 button {
     background-color: #3882F6;
+    display: block;
+    text-align: center;
+    width: 110px;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* Random Info Segment */
+
+.rand_info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 70px;
+}
+
+.rand_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
 }
 
 .information_header {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    display: block;
+    padding-bottom: 20px;
 }
 
+.rand_box {
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+    display:flex;
+    justify-self: center;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.rand_text {
+    max-width: 150px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.single_item {
+    justify-content: center;
+    align-self: center;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+/* Quote Section */
+
 .quote {
-    font-size: 36px;
-    font-weight: lighter;
+    background-color: #E5E7EB;
+    padding: 70px;
+}
+
+.quote_text {
+    font-size: 24px;
+    font-weight:lighter;
     font-style: italic;
     color: #1F2937;
-    background-color: #E5E7EB;
+}
+
+.quote_name {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
